# ipfs-video-kodi

./: .gitignore  Makefile  README.md  addon.xml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
ipfs_video_kodi/: main.py
ipfs_video_kodi/ipfs/: __init__.py
resources/: settings.xml
resources/language/resource.language.en_gb/: strings.po
src/: main.py
src/ipfs/: __init__.py
test/: test_ipfs.py
tests/: test_ipfs.py
