[tool.poetry]
name = "ipfs-video-kodi"
version = "0.0.8"
description = "Kodi plugin to view IPFS video files"
authors = ["Bram Neijt <bram@neijt.nl>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "~3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["requests", "xbmcgui", "xbmcplugin"]
ignore_missing_imports = true
